# cruzhacks-project

./: .copier-answers.yml  .env  .gitignore  Makefile  Makefile.common  sch-project.yaml
.github/: README.md
.github/workflows/: deploy.yml
applications/: Makefile.applications
applications/prompt-eng/: Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  streamlit_app_manifest.yaml
applications/prompt-eng/.streamlit/: config.toml
applications/prompt-eng/notebooks/: prompt_eng.ipynb  speech-recog.ipynb
applications/prompt-eng/src/prompt_eng/: bedrock_helpers.py  prompts.py  speech_quality_report.py  streamlit_app.py
applications/prompt-eng/tests/prompt_eng/: dummy_test.py
components/: Makefile.components
components/deployment/: .copier-answers.yml  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
components/deployment/deploy/catalog/: application.yaml
components/deployment/deploy/kustomize/base/: fiaas.yaml  kustomization.yaml  kustomizeconfig.yaml
components/deployment/entrypoints/: get_model_context.py
components/deployment/notebooks/: exploration.ipynb
pipelines/: Makefile  pyproject.toml  run_pipelines.ipynb
pipelines/config/: config-global.yaml
pipelines/src/pipelines/prompt_eng/: pipeline_deploy.py
pipelines/src/pipelines/prompt_eng/config/: components.yaml  modifiers-global.yaml  runs-dev.yaml
pipelines/tests/: test_kfp_unicron.py
