[tool.poetry]
name = "ml-bootstrap-pipelines"
version = "0.1.0"
description = ""
authors = ["Guillem-rossello"]
packages = [{include = "pipelines", from = "src"}]

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.group.dev.dependencies]
kfp = "~1.8.13"
kfp-unicron = "2.0.0-beta.8"
ipykernel = "~6.23.1"
urllib3= "~1.26.15"
click = "~8.1"
flake8 = "~6.1"
isort = "~5.12"
pylint = "~2.17"
mypy = "1.6.1"
pytest = "~7.4"
pytest-cov = "~4.1"

[tool.poetry.dev-dependencies.black]
version = "23.10.0"
allow-prereleases = true

[[tool.poetry.source]]
name = "adevinta"
url = "https://artifactory.mpi-internal.com/artifactory/api/pypi/pypi-virtual/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 140
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
