[tool.poetry]
name = "deployment"
version = "0.1.0"
description = "deployment components package"
authors = ["Guillem-rossello"]
readme = "README.md"
keywords = ["kubeflow", "kfp", "components", "pipelines"]
packages = [
    { include = "deployment", from = "src" }
]

[tool.poetry.scripts]
say-hello = "deployment.cli:cli"

[tool.poetry.dependencies]
python = "~3.9"
kfp = "~1.8.2"

[tool.poetry.dev-dependencies]
kfp-unicron = "2.0.0-beta.6"
click = "~8.1"
ipykernel = "~6.23.1"
flake8 = "~6.1"
isort = "~5.12"
pylint = "~2.17"
mypy = "1.6.1"
pytest = "~7.4"
pytest-cov = "~4.1"
unify = "0.5"

[tool.poetry.dev-dependencies.black]
version = "23.10.0"
allow-prereleases = true

[[tool.poetry.source]]
name = "adevinta"
url = "https://artifactory.mpi-internal.com/artifactory/api/pypi/pypi-virtual/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 140
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
